Cleaned up formatting of base gameboard so that the gameboard no longer overlaps with the navbar

--- a/frontend/src/components/Gameboard.css
+++ b/frontend/src/components/Gameboard.css
@@ -1,5 +1,6 @@
 #gameboard {
-    text-align: center
+    text-align: center;
+    margin-top: 5.5%;
 }
 
 #block_display {
